# NotepadLM

./: .gitignore  LICENSE  README.md  pyproject.toml  run.sh
src/app/: app.py  dependencies.py
src/app/api/routes/: ask.py  auth.py  groups.py  notes.py  query.py  search.py
src/app/api/schemas/: answer.py  auth.py  group.py  groups.py  note.py  notes.py  query.py  search.py  user.py
src/app/core/domain/clusterization/: __init__.py  clusterizer.py  note.py
src/app/core/domain/database/: __init__.py  answer.py  group.py  note.py  repository.py  user.py
src/app/core/domain/entities/: __init__.py  group.py  note.py
src/app/core/domain/repositories/: __init__.py  repository.py
src/app/core/domain/vectorstore/: __init__.py  note.py  vectorstore.py
src/app/core/services/: answer_service.py  auth_service.py  note_service.py  user_service.py
src/app/infrastructure/: bootstrap.py
src/app/infrastructure/clusterization/: clusterizer.py  clusterizer_config.py  llm_label_adapter.py
src/app/infrastructure/database/: models.py  repository.py
src/app/infrastructure/prompts/: answer_prompt.py  answer_schema.py  cluster_labeling_prompt.py
src/app/infrastructure/vectorstore/: vectorstore.py
src/frontend/: index.html  package-lock.json  package.json
src/frontend/public/: sakura.min.js
src/frontend/src/: App.jsx  index.css
src/frontend/src/api/: client.js
src/frontend/src/components/: AnswerCard.jsx  CitationTooltip.jsx  GroupCard.jsx  GroupList.jsx  Layout.jsx  LoginForm.jsx  Navbar.jsx  NoteCard.jsx  NoteForm.jsx  NoteList.jsx  NoteView.jsx  RegisterForm.jsx  SearchResultCard.jsx
src/frontend/src/context/: AuthContext.jsx  SakuraContext.jsx
src/frontend/src/pages/: AnswerDetailPage.jsx  AskPage.jsx  GroupDetailPage.jsx  GroupsPage.jsx  LoginPage.jsx  NoteDetailPage.jsx  NotesPage.jsx  RegisterPage.jsx  SearchPage.jsx
src/frontend/src/services/: answerService.js  authService.js  groupService.js  noteService.js
src/frontend/src/utils/: storage.js
thesis/: Makefile  presentation.pptx  thesis.tex
user_scenario/: note_set.json  upload_notes.py
