[project]
name = "NotepadLM"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "marcin-banak", email = "marcin.banak03@gmail.com"},
]
dependencies = [
    "fastapi>=0.128.0", 
    "sqlalchemy>=2.0.45",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.40.0",
    "langchain>=1.2.1",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-text-splitters>=1.1.0",
    "langchain-core>=1.2.6"
]
requires-python = "==3.14.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
