[project]
name = "NotepadLM"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "marcin-banak", email = "marcin.banak03@gmail.com"},
]
dependencies = [
    "fastapi>=0.128.0", 
    "sqlalchemy>=2.0.45",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.40.0",
    "langchain>=1.2.2",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-text-splitters>=1.1.0",
    "langchain-core>=1.2.6",
    "chromadb>=0.5.0",
    "bertopic[langchain]>=0.17.4",
    "umap-learn>=0.5.9.post2",
    "hdbscan>=0.8.41",
    "langchain-google-genai>=4.1.3",
    "requests>=2.31.0",
    "langchain-chroma>=1.1.0",
    "ipykernel>=7.1.0",
    "scikit-learn>=1.8.0",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "pandas>=2.3.3",
    "numpy>=2.3.5"
]
requires-python = ">=3.12,<=3.14"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
